# tauri-template-codex-app

./: .gitignore  README.md  package-lock.json  package.json  pnpm-lock.yaml
frontend/: index.html  package.json  pnpm-lock.yaml  vite.config.ts
frontend/src/: App.tsx  index.css  main.tsx  styles.ts
frontend/src-tauri/: Cargo.toml  tauri.conf.json
frontend/src-tauri/src/: lib.rs
frontend/src/components/: StatusBar.tsx  TitleBar.tsx
frontend/src/components/Layout/: PageHeader.tsx
frontend/src/stores/: themeStore.ts
src/: App.css  styles.ts  utils.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: main.rs
src-tauri/src/commands/: window.rs
src/types/: index.ts
