[package]
name = "tauri-template-codex-app"
version = "0.1.0"
edition = "2024"
description = "Tauri template with borderless window, sidebar, and status bar"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["macos-private-api", "tray-icon"] }
tauri-plugin-shell = "2"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
window-vibrancy = "0.5"
